# trans-c

./: CMakeLists.txt
example/: CMakeLists.txt  fn.cpp  ops.cpp  pack.cpp  var.cpp
include/ap/trans/: c.hpp
include/ap/trans/c/: c.hpp  fn.hpp  ops.hpp  pack.hpp  var.hpp
include/ap/trans/c/ops/: ari.hpp  bin.hpp  bit.hpp  boolean.hpp  cmp.hpp  control.hpp  func.hpp  mem.hpp  move.hpp  opc.hpp  ord.hpp  uni.hpp
src/: CMakeLists.txt  fn.cpp  ops.cpp  pack.cpp  var.cpp
src/ops/: ari.cpp  bin.cpp  bit.cpp  boolean.cpp  cmp.cpp  control.cpp  func.cpp  mem.cpp  move.cpp  opc.cpp  ord.cpp  uni.cpp
